--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./static/css/style.css" />
 </head>
 <body>
+    
     <div class="container">
         <div class="row header">
                 <h1>Nutrition Value App</h1>
@@ -37,9 +38,6 @@
                                 <i class="indicator glyphicon glyphicon-chevron-down  pull-right"></i>
                             </h4>
                         </div>
-
-                      <!-- ,,,,,,,4,,,,0.9ug,124.mg,Milk,Tesco, -->
-
 
                         <div id="panel1" class="panel-collapse collapse">
                             <div class="panel-body panel-size">
@@ -101,30 +99,106 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
 
 
 
 
+ <!-- JINJA TEMPLATING START -->
+ {% set foodItem1 = {"name": "Tomato Puree", "brand": "Cucina", "energy1": "335.kJ", "energy2": "79.kcal", "fat": "0.5g","saturated": "0.1g", "carbohydrates": "14.0g", "sugar": "14.0g", "fibre": "1.8g", "protein": "4.3g", "salt": "1.6g","classification": "Tomato Puree", "shop": "Aldi", "notes": "Double Concentrate / 20g = 1/5-a-day"} %}
 
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h4 class="panel-title accordion-toggle" data-target="#panel2" data-toggle="collapse" data-parent="#accordion">{{ foodItem1.name }}
+                                 - {{ foodItem1.brand }} - {{ foodItem1.classification }}
+                                <i class="indicator glyphicon glyphicon-chevron-down  pull-right"></i>
+                            </h4>
+                        </div>
+
+
+
+                        <div id="panel2" class="panel-collapse collapse">
+                            <div class="panel-body panel-size">
+                                <div class="flip3D">
+                                    <div class="card back slow" id="box2_back">
+                                        <h4>More information</h4>
+                                        <p>{{ foodItem1.notes }}</p>
+                                        <p>This item was bought from {{ foodItem1.shop }}.</p>
+                                        <div class="card-button">
+                                            <div class="btnGroup1">
+                                                <button class="btnEdit onclick=""><strong>Edit</strong></button>
+                                                <button class="btnDelete" onclick=""><strong>Delete</strong></button>
+                                            </div>
+                                            <div class="btnGroup2">
+                                                <button class="btnFlip" onclick="flipBox('box2_front', 'box2_back')"><strong>Back to Front</strong></button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="card front slow" id="box2_front">
+                                        <div class="cardContent">
+                                            <div class="cardItem">
+                                                <h4>Energy:</h4>
+                                                <p>{{ foodItem1.energy1 }} / {{ foodItem1.energy2 }}</p>
+                                            </div>
+                                            <div class="cardItem">
+                                                <h4>Fats:</h4>
+                                                <p>{{ foodItem1.fat }}</p>
+                                            </div>
+                                            <div class="cardItem">
+                                                <h4>Saturate:</h4>
+                                                <p>{{ foodItem1.saturated }}</p>
+                                            </div>
+                                            <div class="cardItem">
+                                                <h4>Carbohydrates:</h4>
+                                                <p>{{ foodItem1.carbohydrates }}</p>
+                                            </div>
+                                            <div class="cardItem">
+                                                <h4>Sugar:</h4>
+                                                <p>{{ foodItem1.sugar }}</p>
+                                            </div>
+                                            <div class="cardItem">
+                                                <h4>Fibre:</h4>
+                                                <p>{{ foodItem1.fibre }}</p>
+                                            </div>
+                                            <div class="cardItem">
+                                                <h4>Protein:</h4>
+                                                <p>{{ foodItem1.protein }}</p>
+                                            </div>
+                                            <div class="cardItem">
+                                                <h4>Salt:</h4>
+                                                <p>{{ foodItem1.salt }}</p>
+                                            </div>
+                                        </div>
+                                        <div class="card-button">
+                                            <div class="btnGroup2">
+                                                <button class="btnFlip" onclick="flipBox('box2_front', 'box2_back')"><strong>More info and Controls at the Back</strong></button>
+                                            </div>
+                                        </div>
+                                        
+                                    </div>
+                                </div>
+                            </div>
 
                         </div>
                     </div>
+                    
                     <div class="panel panel-default">
-                            <div class="panel-heading">
-                                    <h4 class="panel-title accordion-toggle" data-target="#panel2" data-toggle="collapse" data-parent="#accordion">Title - Brand - Category
-                                            <i class="indicator glyphicon glyphicon-chevron-down  pull-right"></i>
-                                    </h4>
-                            </div>
-                            <div id="panel2" class="panel-collapse collapse">
-                                <div class="panel-body">
-                                        <tr><th>Energy</th> <td>209.kJ</td> <th>Energy</th> <td></td></tr>
-                                        <tr><th>Fat</th> <td></td> <th>Saturated</th> <td></td></tr>
-                                        <tr><th>Carbohydrates</th> <td></td> <th>Sugar</th> <td></td></tr>
-                                        <tr><th>Fibre</th> <td></td> <th>Protein</th> <td></td></tr>
-                                        <tr><th>Salt</th> <td></td> <th></th> <td></td></tr>
-                                </div>
+                        <div class="panel-heading">
+                                <h4 class="panel-title accordion-toggle" data-target="#panel3" data-toggle="collapse" data-parent="#accordion">Title - Brand - Category
+                                        <i class="indicator glyphicon glyphicon-chevron-down  pull-right"></i>
+                                </h4>
+                        </div>
+                        <div id="panel3" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                    <tr><th>Energy</th> <td>209.kJ</td> <th>Energy</th> <td></td></tr>
+                                    <tr><th>Fat</th> <td></td> <th>Saturated</th> <td></td></tr>
+                                    <tr><th>Carbohydrates</th> <td></td> <th>Sugar</th> <td></td></tr>
+                                    <tr><th>Fibre</th> <td></td> <th>Protein</th> <td></td></tr>
+                                    <tr><th>Salt</th> <td></td> <th></th> <td></td></tr>
                             </div>
                         </div>
+                    </div>
                 </div><!-- End accordion panel-group -->
             </div><!-- End column -->
         </div><!-- End row -->
