--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
                 <h1>Nutrition Value App</h1>
                 <p>Nutrition value per 100g (100ml) for various food items.</p>
         </div>
-        <div class="row">
+        <div class="row"> <!-- Heading for Accordion -->
             <div class="col-md-12">
                 <div class="section-title text-center">
                     <h2>Food Items</h2>
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row">  <!-- Holds Accordion Panels -->
             <div class="col-sm-12">
                 <div class="panel-group" id="accordion">
                 <!-- JINJA TEMPLATING START -->
@@ -153,16 +153,26 @@
         } 
     </script>
     <script>
-        /* // function toggleChevron(e) {
-        //     $(e.target)
-        //         .prev('.panel-heading')
-        //         .find("i.indicator")
-        //         .toggleClass('glyphicon-chevron-down glyphicon-chevron-up');
-        // }
-        // $('#accordion').on('hidden.bs.collapse', toggleChevron);
-        // $('#accordion').on('shown.bs.collapse', toggleChevron); */
-
+        function toggleChevron(e) {
+            $(e.target)
+                .prev('.panel-heading')
+                .find("i.indicator")
+                .toggleClass('glyphicon-chevron-down glyphicon-chevron-up');
+        }
+        $('#accordion').on('hidden.bs.collapse', toggleChevron);
+        $('#accordion').on('shown.bs.collapse', toggleChevron);
     </script>
+    <script>
+        $(document).ready(function() {
+            $('.panel-collapse').on('show.bs.collapse', function () {
+                $(this).siblings('.panel-heading').addClass('active');
+            });
+            $('.panel-collapse').on('hide.bs.collapse', function () {
+                $(this).siblings('.panel-heading').removeClass('active');
+            });
+        });
+    </script>
+  
     
 </body>
 </html>
